# basic_rust_app

./: .dockerfile  Cargo.toml  README.md
src/: main.rs
src/db/: mod.rs  models.rs  queries.rs  schema.rs
src/services/: data_processing.rs  mod.rs
src/tests/: api_test.rs
