[package]
name = "basic_rust_app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
diesel = { version = "2.1.6"}
#diesel = { version = "2.1.6", features = ["postgres"] }
serde = { version = "1.0.202", features = ["derive"] }
tokio = "1.37.0"
env_logger = "0.11.3"
log = "0.4.21"
